mType/tests/testFiles/import/error/importEmptyBraces.mt
// Test: Empty braces - importing nothing
import { } from "./modules/SomeModule.mt"

print("Nothing imported");
